[package]
name = "yprox"
description = "A modifying, multiplexer tcp proxy server tool and library."
version = "0.2.1"
authors = ["Felipe Coury <felipe.coury@gmail.com>", "mo8bit"]
edition = "2021"
license = "MIT"
repository = "https://github.com/fcoury/yprox"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.29"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
toml = { version = "0.8.8", features = ["preserve_order"] }
